--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11,7 +11,7 @@
   <script>
     window.$docsify = {
       name: 'Моя Вики',
-      repo: 'https://github.com/ilyaresko/ilyaresko.github.io',
+      repo: 'https://github.com/ilyaresko/',
       loadSidebar: true, // Включает боковое меню
       subMaxLevel: 2
     }
