--- a/wiki/index.html
+++ b/wiki/index.html
@@ -17,5 +17,6 @@
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//unpkg.com/docsify-page-toc/dist/docsify-page-toc.js"></script>
 </body>
 </html>
